<resources>
    <string name="app_name">Bioreactor 2</string>

    <string name="main_tab_monitor">MONITOR</string>
    <string name="main_tab_history">HISTORY DATA</string>
    <string name="main_tab_preference">SETTING</string>
    <string name="main_tan_autocontrol">AUTO CONTROL</string>


    <string name="edit">EDIT</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search_title">search</string>
    <string name="navigation_item_1">item1</string>
    <string name="navigation_item_2">item2</string>
    <string name="navigation_subheader">subheader</string>
    <string name="navigation_sub_item_1">sub item1</string>
    <string name="navigation_sub_item_2">sub item 2</string>
    <string name="section_title">section_title</string>
    <string name="favourite">favourite</string>
    <string name="downloaded">download</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world～!</string>

    <string name="main_tab_O2_setting">氧氣調控</string>
    <string name="main_tab_stirrer_setting">轉速調控</string>

    <string name="history_graph_mode">圖形顯示</string>
    <string name="history_number_mode">數據顯示</string>
    <string name="history_start_time">從</string>
    <string name="history_end_time">到</string>
    <string name="setting_profile">基本資料</string>
    <string name="setting_alarm">警示設定</string>
    <string name="profile_username">姓      名</string>
    <string name="profile_userid">代      號</string>
    <string name="profile_userphone">聯絡電話</string>
    <string name="profile_height">身  高(公分)</string>
    <string name="profile_weight">體  重(公斤)</string>
    <string name="profile_email">電子信箱</string>
    <string name="profile_contact_name">緊急聯絡人</string>
    <string name="profile_contact_phone">緊急聯絡電話</string>

    <string name="alarm_o2autolevel">自動控氧</string>
    <string name="alarm_o2autoAlarm">自動通知</string>
    <string name="alarm_spo2_margin_up">氧氣飽和上限</string>
    <string name="alarm_spo2_margin_down">氧氣飽和下限</string>
    <string name="alarm_heartrate_margin_top">心跳上限</string>
    <string name="alarm_heartrate_margin_bottom">心跳下限</string>
    <!--<string name="alarm_emergency_duration">危險值通知持續時間</string>-->
    <string name="alarm_emergency_duration">危險通知條件</string>
    <string name="alarm_pre_record_message">預錄簡訊文字</string>
    <string name="alarm_pre_record_audio">預錄語音留言</string>

    <!-- Unit String-->
    <string name="unit_pound">磅</string>
    <string name="unit_kg">公斤</string>
    <string name="unit_spo2">%</string>
    <string name="unit_heartrate">BPM</string>

    <!-- Button String-->
    <string name="button_ok">確定</string>
    <string name="button_save_image">存成圖檔並寄出</string>
    <string name="update_history_chart">更新歷史記錄圖</string>
    <string name="update_setting">更新設定</string>
    <string name="clear_ok">清除成功</string>
    <string name="clear_fail">清除失敗</string>
    <string name="alarm_played">播放語音通知！</string>
    <!-- Bluetooth -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>


    <!--  Device Name -->
    <string name="Oxygen">DO</string>
    <string name="pH">pH</string>
    <string name="Temp">Temp</string>
    <string name="Pump">Pump</string>
    <string name="Stirrer">RPM</string>
    <string name="Water">Water</string>
    <string name="title_activity_auto_control">AutoControlActivity</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_step_view">StepViewActivity</string>
    <string name="details">more</string>

    <!--  spinner select -->
    <string-array name="stirArr">
        <item>null</item>
        <item>0</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
    </string-array>
    <!--  spinner select -->
    <string-array name="pumpArr">
        <item>null</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
        <item>105</item>
        <item>110</item>
        <item>115</item>
        <item>120</item>
        <item>125</item>
        <item>130</item>
        <item>135</item>
        <item>140</item>
        <item>145</item>
        <item>150</item>
        <item>155</item>
        <item>160</item>
        <item>165</item>
        <item>170</item>
        <item>175</item>
        <item>180</item>
        <item>185</item>
        <item>190</item>
        <item>195</item>
        <item>200</item>
        <item>205</item>
        <item>210</item>
        <item>215</item>
        <item>220</item>
        <item>225</item>
        <item>230</item>
        <item>235</item>
        <item>240</item>
        <item>245</item>
        <item>250</item>
        <item>255</item>
        <item>-5</item>
        <item>-10</item>
        <item>-15</item>
        <item>-20</item>
        <item>-25</item>
        <item>-30</item>
        <item>-35</item>
        <item>-40</item>
        <item>-45</item>
        <item>-50</item>
        <item>-55</item>
        <item>-60</item>
        <item>-65</item>
        <item>-70</item>
        <item>-75</item>
        <item>-80</item>
        <item>-85</item>
        <item>-90</item>
        <item>-95</item>
        <item>-100</item>
        <item>-105</item>
        <item>-110</item>
        <item>-115</item>
        <item>-120</item>
        <item>-125</item>
        <item>-130</item>
        <item>-135</item>
        <item>-140</item>
        <item>-145</item>
        <item>-150</item>
        <item>-155</item>
        <item>-160</item>
        <item>-165</item>
        <item>-170</item>
        <item>-175</item>
        <item>-180</item>
        <item>-185</item>
        <item>-190</item>
        <item>-195</item>
        <item>-200</item>
        <item>-205</item>
        <item>-210</item>
        <item>-215</item>
        <item>-220</item>
        <item>-225</item>
        <item>-230</item>
        <item>-235</item>
        <item>-240</item>
        <item>-245</item>
        <item>-250</item>
        <item>-255</item>
    </string-array>
    <string name="title_activity_step_editor">StepEditor</string>

</resources>
