<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:title="@string/navigation_item_1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/navigation_item_2"/>
    </group>
    <item
        android:id="@+id/section"
        android:title="@string/section_title">
        <menu>
            <item
                android:id="@+id/drawer_favourite"
                android:icon="@drawable/ic_open_search"
                android:title="@string/favourite"/>

            <item
                android:id="@+id/drawer_downloaded"
                android:icon="@drawable/ic_close_search"
                android:title="@string/downloaded"/>


        </menu>
    </item>

</menu>